<resources>
    <string name="app_name">FriendLink</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>

    <!--  Resource string name for home fragment  -->
    <string name="number_of_friends">You have %1$d friends</string>
    <string name="notification_text">You have received %1$d messages!</string>
    <string name="send_message_hint">Send yours now to view them</string>
    <string name="reveal_friend_button_text">Reveal friend of the day</string>
    <string name="reveal_question_button_text">Reveal question of the day</string>
    <string name="no_friend_guide">Go to Friends to add some friends now!</string>
    <string name="message_already_sent">You have already sent a message today!</string>
    <string name="message_already_sent">You have sent a message today!</string>
    <string name="no_messages_text">You have received no new messages</string>

    <string name="no_friend_text">You have no friends yet</string>
    <string name="send_message">Send</string>
    <string name="type_message_hint">Type your message here</string>
    <string name="to">TO</string>
    <string name="title_contact">CONTACT</string>
    <string name="prompt_message">What is something that made you happy today?</string>

    <!--  Resource string name for Sent fragment  -->
    <string name="message_sent">Message Sent!</string>
    <string name="close">Close</string>

    <!--  Resource string name for friends fragment  -->

    <!--  Resource string name for login fragment  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="welcome_text">WELCOME TO FRIENDLINK</string>

    <!--  Resource string name for register fragment  -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_button">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="createAccount">CREATE AN ACCOUNT</string>

    <!--  Resource string name for profile fragment  -->
    <string name="not_login">You have not login yet</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placeholder_date">December 1</string>
    <string name="placeholder_phone_number">123-456-789</string>
    <string name="logout_button_description">This is a button for users to be able to log out of their account.</string>
</resources>