<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.profile.ProfileFragment">

    <ImageButton
        android:id="@+id/profilePic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/profilepic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_name"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@+id/profilePic" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toTopOf="@+id/firstName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/sentMessagesButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/color_primary"
                    android:text="@string/sent"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/receivedMessagesButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/received"
                    android:textColor="@color/black"
                    android:stateListAnimator="@null"/>

            </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
