<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context=".ui.profile.RegisterFragment">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="12dp"
        android:text="@string/createAccount"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/registerContainer"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle">

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/first_name"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/firstName"
            android:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_name"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/lastName"
            android:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/rounded_edittext_background" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/email"
            android:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/rounded_edittext_background" />

        <TextView
            android:id="@+id/textViewPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/phoneNumber"
            android:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="phone"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/rounded_edittext_background" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/rounded_edittext_background" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerContainer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Have an account already? "
            android:textColor="@color/black"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@android:color/transparent"
            android:textColor="@color/color_primary"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>