<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.home.launch.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/to"
            android:textColor="@color/aux_text_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Profile Picture -->
        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@+id/to">

            <ImageView
                android:id="@+id/friendPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@color/color_primary"
                app:layout_constraintDimensionRatio="H,1:1"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/friendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="John Doe"
            android:textAppearance="@style/nameText"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toEndOf="@+id/friendPhoto" />

        <TextView
            android:id="@+id/prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:paddingVertical="20dp"
            android:text="What is something that made you happy today?"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friendPhoto" />

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/aux_text_color"
            android:fontFamily="@font/poppins"
            android:hint="@string/type_message_hint"
            android:inputType="textMultiLine"
            android:paddingVertical="32dp"
            android:textColor="@color/normal_text_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prompt"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:text="@string/send_message"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>